@startuml

title __DUPFINDER's Class Diagram__\n

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace dry {
          namespace dupfinder {
            class edu.hm.hafner.analysis.parser.dry.dupfinder.DupFinderParser {
                {static} - serialVersionUID : long
                + DupFinderParser()
                + DupFinderParser()
                # configureParser()
                # convertDuplicationsToIssues()
            }
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace dry {
          namespace dupfinder {
            class edu.hm.hafner.analysis.parser.dry.dupfinder.Duplicate {
                - cost : int
                - fragments : List<Fragment>
                + addFragment()
                + getCost()
                + getFragments()
                + setCost()
            }
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace dry {
          namespace dupfinder {
            class edu.hm.hafner.analysis.parser.dry.dupfinder.Fragment {
                - fileName : String
                - text : String
                + getFileName()
                + getLineRange()
                + getOffsetRange()
                + getText()
                + setFileName()
                + setLineRange()
                + setOffsetRange()
                + setText()
            }
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace dry {
          namespace dupfinder {
            class edu.hm.hafner.analysis.parser.dry.dupfinder.Range {
                - end : int
                - start : int
                + getEnd()
                + getStart()
                + setEnd()
                + setStart()
            }
          }
        }
      }
    }
  }
  

  edu.hm.hafner.analysis.parser.dry.dupfinder.DupFinderParser -up-|> edu.hm.hafner.analysis.parser.dry.AbstractDryParser
  edu.hm.hafner.analysis.parser.dry.dupfinder.Fragment o-- edu.hm.hafner.analysis.parser.dry.dupfinder.Range : lineRange
  edu.hm.hafner.analysis.parser.dry.dupfinder.Fragment o-- edu.hm.hafner.analysis.parser.dry.dupfinder.Range : offsetRange


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
